# thesis-youtube-virality-thai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MEMORY.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: data-engineer.md  evaluator.md  explainer.md  model-trainer.md  plan-orchestrator.md  thesis-writer.md
.claude/commands/: thesis.md
.claude/memory/: active.md  architecture.md  changelog.md  decisions.md  experiments.md
.claude/rules/: reproducibility.md  research-engineering.md  session-continuity.md
.github/workflows/: ci.yml
configs/: data.yaml  eval.yaml  features.yaml  train.yaml  train_m1.yaml  train_phaya_lr1e5_ep6.yaml  train_phaya_lr2e5_ep4.yaml  train_phaya_lr5e6_ep6.yaml  train_phaya_multifield.yaml
docs/slides/: slides.tex
docs/thesis/: .latexmkrc  Makefile  README.md  REVIEW.md  kmitl-stat.bbx  main.tex  references.bib
notebooks/: 04_transformer_finetune.ipynb
reports/figures/: shap_global_importance.csv
reports/tables/: all_models_metrics.csv  all_models_so_far.csv  baselines_metrics.csv  calibration_baselines_lightgbm_structured_plus_tfidf_isotonic.csv  calibration_baselines_lightgbm_structured_plus_tfidf_none.csv  calibration_baselines_lightgbm_structured_plus_tfidf_platt.csv  calibration_stacking_stacking_lr_calibrated_isotonic.csv  calibration_stacking_stacking_lr_calibrated_none.csv  calibration_stacking_stacking_lr_calibrated_platt.csv  calibration_stacking_stacking_lr_isotonic.csv  calibration_stacking_stacking_lr_none.csv  calibration_stacking_stacking_lr_platt.csv  calibration_summary.csv  cochrans_q.csv  cochrans_q_encoders.csv  errors_top_fn_baselines_lightgbm_structured_plus_tfidf.csv  errors_top_fn_stacking_stacking_lr.csv  errors_top_fn_stacking_stacking_lr_calibrated.csv  errors_top_fp_baselines_lightgbm_structured_plus_tfidf.csv  errors_top_fp_stacking_stacking_lr.csv  errors_top_fp_stacking_stacking_lr_calibrated.csv  k_fold_robustness.csv  (+7 more)
scripts/: collect_data.py  evaluate.py  explain.py  prepare_data.py  stacking_drop_one.py  thesis_figures.py  train_baselines.py  train_hybrid.py  train_stacking.py  train_transformer.py
src/: __init__.py  utils.py
tests/: __init__.py  test_labels.py  test_splits.py  test_structural.py
(+88 files in other folders)
