[project]
name = "thesis-youtube-virality-thai"
version = "0.1.0"
description = "A Comparative Study of Thai Transformer Language Models for YouTube Video Virality Prediction — WangchanBERTa, Typhoon 2.5, OpenThaiGPT, with sentiment & multi-modal hybrid extensions"
authors = [
    { name = "Traipoohrin Suebuswansarn" },
    { name = "Teeranon Chailangka" },
    { name = "Phanudech Phuthoson" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    # Core data
    "pandas>=2.2",
    "numpy>=1.26,<2.2",
    "pyarrow>=15.0",
    "polars>=1.0",
    # Modeling
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "xgboost>=2.1",
    "optuna>=4.0",
    "imbalanced-learn>=0.13",
    # Deep learning (CPU/MPS-friendly on Mac; CUDA wheels installed via uv on Linux)
    "torch>=2.4",
    "transformers>=4.46",
    "accelerate>=1.0",
    "datasets>=3.0",
    "evaluate>=0.4",
    "sentencepiece>=0.2",
    "safetensors>=0.4",
    # Thai NLP
    "pythainlp>=5.0",
    # Explainability
    "shap>=0.46",
    "lime>=0.2.0.1",
    # Stats & viz
    "scipy>=1.13",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",
    # Experiment tracking
    "mlflow>=2.18",
    # Utils
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "rich>=13.9",
    "typer>=0.13",
    # Data collection (YouTube API)
    "google-api-python-client>=2.150",
    "isodate>=0.7",
]

[project.optional-dependencies]
gpu = [
    # Place to declare CUDA-specific (bitsandbytes, peft) — install via cloud notebook
    "peft>=0.13",
    "bitsandbytes>=0.44 ; sys_platform == 'linux'",
    "trl>=0.12",
]
dev = [
    "ruff>=0.7",
    "black>=24.10",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
